# F1TenthSimulator

./: .gitignore  README.md
new_f1tenth_simulator/black_car_model/urdf/: black_car.urdf
new_f1tenth_simulator/blue_car_model/urdf/: blue_car.urdf
new_f1tenth_simulator/clear_car_model/urdf/: clear_car.urdf
new_f1tenth_simulator/f1tenth_gazebo/launch/: simulator.launch
new_f1tenth_simulator/f1tenth_gazebo/worlds/: Track1.world  default_track.world
new_f1tenth_simulator/f1tenth_model/meshes/: BACKUPScaledCar.dae
new_f1tenth_simulator/f1tenth_model/plugins/: wheel_plugin.cc
new_f1tenth_simulator/f1tenth_model/urdf/: f1tenth (copy).urdf  f1tenth.urdf
new_f1tenth_simulator/f1tenth_object_tracking/src/: f1tenth_object_tracking.cpp
new_f1tenth_simulator/f1tenth_semantic_segmentation/: settings.yaml
new_f1tenth_simulator/f1tenth_track_model/: CMakeLists.txt  package.xml
new_f1tenth_simulator/neural_network_training/: CMakeLists.txt  package.xml
new_f1tenth_simulator/neural_network_training/config/: bounding_box_recorder.yaml  overtaking_recorder.yaml  semantic_segmentation_recorder.yaml
new_f1tenth_simulator/neural_network_training/launch/: bounding_box_recorder.launch  overtaking_recorder.launch  semantic_segmentation_recorder.launch
new_f1tenth_simulator/neural_network_training/src/: bounding_box_recorder.cpp  overtaking_recorder.cpp  semantic_segmentation_recorder.cpp
new_f1tenth_simulator/sample_lane_follower_node/: CMakeLists.txt  package.xml
new_f1tenth_simulator/sample_overtaking_node/: CMakeLists.txt  package.xml
(+18 files in other folders)
